<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AskFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <TextView
        android:id="@+id/askQuestionsHeading"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ask_heading"
        android:textSize="28sp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="horizontal"
            >

            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ask_title"
            android:textSize="20sp"
            android:layout_marginLeft="20dp"
            />

            <EditText
                android:id="@+id/questionTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:ems="10"
                android:layout_marginRight="20dp"
                android:hint="@string/ask_title"
                android:inputType="textPersonName"
                android:text="" />

        </LinearLayout>

        <TextView
            android:id="@+id/questionDescriptionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:layout_marginLeft="20dp"
            android:text="@string/ask_description"
            />

        <EditText
            android:id="@+id/questionDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="75dp"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:hint="@string/ask_description_hint"
            />

        <Button
            android:id="@+id/btnPostNewQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:textColor="@color/browser_actions_bg_grey"
            android:background="@drawable/com_facebook_button_background"
            android:text="@string/ask_post_button" />

    </LinearLayout>

</FrameLayout>