<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Edit_Reply">

    <EditText
        android:id="@+id/replytxt"
        android:layout_width="376dp"
        android:layout_height="268dp"
        android:layout_marginTop="76dp"
        android:background="@drawable/replybackground"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="60dp"
        android:layout_height="29dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/reply_to"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/replytxt" />

    <TextView
        android:id="@+id/reply_to_show"
        android:layout_width="60dp"
        android:layout_height="23dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textColor="#2196F3"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView27"
        app:layout_constraintTop_toBottomOf="@+id/replytxt" />

    <Button
        android:id="@+id/update_reply"
        android:layout_width="109dp"
        android:layout_height="48dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="26dp"
        android:background="@drawable/update_reply"
        android:text="@string/update_post"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.705"
        app:layout_constraintStart_toEndOf="@+id/reply_to_show"
        app:layout_constraintTop_toBottomOf="@+id/replytxt" />

    <TextView
        android:id="@+id/reply_date_edit"
        android:layout_width="140dp"
        android:layout_height="21dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/update_reply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.873"
        app:layout_constraintStart_toEndOf="@+id/reply_to_show"
        app:layout_constraintTop_toBottomOf="@+id/replytxt"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/text"
        android:layout_width="409dp"
        android:layout_height="60dp"
        android:layout_marginBottom="8dp"
        android:background="#F76639"
        android:fontFamily="sans-serif-light"
        android:text="@string/edit_reply_headline"
        android:textAlignment="center"

        android:textColor="#FFFFFF"

        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/replytxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>